[gd_scene load_steps=5 format=3 uid="uid://cfhtxx7iaeigf"]

[ext_resource type="Script" uid="uid://rgeqbknrvu7u" path="res://Scripts/pages/select_deck.gd" id="1_tu0rh"]
[ext_resource type="Theme" uid="uid://n84sl2w1051r" path="res://testFontTheme.tres" id="2_anx2g"]
[ext_resource type="Script" uid="uid://d11kfgsd6jgt" path="res://ExternalAssets/addons/AutoSizeText/ui/AutoSizeLabel.gd" id="3_bwj1q"]
[ext_resource type="Script" uid="uid://bnaosc552evuy" path="res://ExternalAssets/addons/AutoSizeText/ui/AutoSizeButton.gd" id="3_co2ot"]

[node name="SelectDeck" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tu0rh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="UI" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Menu" type="HBoxContainer" parent="MarginContainer/UI"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="BaralhoSelector" type="VBoxContainer" parent="MarginContainer/UI/Menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SelectedInfo" type="HBoxContainer" parent="MarginContainer/UI/Menu/BaralhoSelector"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="albComplete" type="Label" parent="MarginContainer/UI/Menu/BaralhoSelector/SelectedInfo"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_anx2g")
text = "Album: null/null"
metadata/_edit_use_anchors_ = true

[node name="maPont" type="Label" parent="MarginContainer/UI/Menu/BaralhoSelector/SelectedInfo"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_anx2g")
text = "Maior pontuação = null"
metadata/_edit_use_anchors_ = true

[node name="nomeDeck" type="Label" parent="MarginContainer/UI/Menu/BaralhoSelector/SelectedInfo"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_anx2g")
text = "None"
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/UI/Menu/BaralhoSelector"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="BarButs" type="VBoxContainer" parent="MarginContainer/UI/Menu/BaralhoSelector/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BaralhoInfoOptions" type="VBoxContainer" parent="MarginContainer/UI/Menu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="desclabel" type="Label" parent="MarginContainer/UI/Menu/BaralhoInfoOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Descrição:"
metadata/_edit_use_anchors_ = true

[node name="Descrição" type="Panel" parent="MarginContainer/UI/Menu/BaralhoInfoOptions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="DescText" type="Label" parent="MarginContainer/UI/Menu/BaralhoInfoOptions/Descrição"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0103306
anchor_top = 0.00273973
anchor_right = 1.00207
anchor_bottom = 1.00274
theme_override_font_sizes/font_size = 30
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 3
script = ExtResource("3_bwj1q")
max_font_size = 30
metadata/_custom_type_script = "uid://d11kfgsd6jgt"
metadata/_edit_use_anchors_ = true

[node name="SeeSpecialInfo" type="HBoxContainer" parent="MarginContainer/UI/Menu/BaralhoInfoOptions"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SeeRanking" type="Button" parent="MarginContainer/UI/Menu/BaralhoInfoOptions/SeeSpecialInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 1
disabled = true
text = "Ver Rank"
clip_text = true
script = ExtResource("3_co2ot")
button_text = "pontos"
metadata/_custom_type_script = "uid://bnaosc552evuy"
metadata/_edit_use_anchors_ = true

[node name="SeeAlb" type="Button" parent="MarginContainer/UI/Menu/BaralhoInfoOptions/SeeSpecialInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 1
disabled = true
text = "Ver Album"
clip_text = true
script = ExtResource("3_co2ot")
button_text = "álbum"
metadata/_custom_type_script = "uid://bnaosc552evuy"
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/UI"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="Voltar" type="Button" parent="MarginContainer/UI/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 1
text = "voltar
"
clip_text = true
script = ExtResource("3_co2ot")
button_text = "Voltar"
metadata/_custom_type_script = "uid://bnaosc552evuy"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/UI/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/UI/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JOGAR" type="Button" parent="MarginContainer/UI/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 1
disabled = true
text = "jogar
"
clip_text = true
script = ExtResource("3_co2ot")
button_text = "Jogar"
metadata/_custom_type_script = "uid://bnaosc552evuy"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MarginContainer/UI/Menu/BaralhoInfoOptions/SeeSpecialInfo/SeeRanking" to="." method="_on_see_ranking_pressed"]
[connection signal="pressed" from="MarginContainer/UI/Menu/BaralhoInfoOptions/SeeSpecialInfo/SeeAlb" to="." method="_on_see_alb_pressed"]
[connection signal="pressed" from="MarginContainer/UI/Buttons/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="MarginContainer/UI/Buttons/JOGAR" to="." method="_on_jogar_pressed"]
